// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown can focus dropdown and select option 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1em;
  line-height: 0;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #d3d6d7;
  color: #252c35;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
  width: 15rem;
  padding: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxirZ c1"
    >
      <div
        class="c2"
      >
        Charmander
      </div>
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
       
    </button>
  </div>
</div>
`;

exports[`Dropdown can use arrow keys and enter to navigate options 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1em;
  line-height: 0;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #d3d6d7;
  color: #252c35;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
  width: 15rem;
  padding: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxirZ c1"
    >
      <div
        class="c2"
      >
        Charmander
      </div>
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
       
    </button>
  </div>
</div>
`;

exports[`Dropdown closes options when clicking outside 1`] = `
<DocumentFragment>
  .c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1em;
  line-height: 0;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #d3d6d7;
  color: #252c35;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
  width: 15rem;
  padding: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

.c4 {
  background: white;
  position: absolute;
  max-height: 10rem;
  overflow-y: scroll;
  width: 15rem;
  border: 0.5px solid rgba(211,214,215,0.25);
}

.c5 {
  height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Montserrat,Roboto,sans-serif;
}

.c5:focus,
.c5:hover {
  background: rgba(211,214,215,0.5);
  cursor: pointer;
  outline: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 0.2rem;
  width: 2rem;
}

<div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxirZ c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,15L12,10L17,15H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
       
    </button>
    <div
      class="c4"
    >
      <div
        class="c5"
        id="choosePokemon-option-Bulbasaur"
        tabindex="0"
      >
        <div
          class="c6"
        />
        <span>
          Bulbasaur
        </span>
      </div>
      <div
        class="c5"
        id="choosePokemon-option-Charmander"
        tabindex="0"
      >
        <div
          class="c6"
        />
        <span>
          Charmander
        </span>
      </div>
      <div
        class="c5"
        id="choosePokemon-option-Squirtle"
        tabindex="0"
      >
        <div
          class="c6"
        />
        <span>
          Squirtle
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown closes options when clicking outside 2`] = `
<DocumentFragment>
  .c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1em;
  line-height: 0;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #d3d6d7;
  color: #252c35;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
  width: 15rem;
  padding: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxirZ c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
       
    </button>
  </div>
</DocumentFragment>
`;

exports[`Dropdown deselects option when clicking on them twice when dropdown is multi 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1em;
  line-height: 0;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #d3d6d7;
  color: #252c35;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
  width: 15rem;
  padding: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxirZ c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
       
    </button>
  </div>
</div>
`;

exports[`Dropdown displays all options when focused 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1em;
  line-height: 0;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #d3d6d7;
  color: #252c35;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
  width: 15rem;
  padding: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

.c4 {
  background: white;
  position: absolute;
  max-height: 10rem;
  overflow-y: scroll;
  width: 15rem;
  border: 0.5px solid rgba(211,214,215,0.25);
}

.c5 {
  height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Montserrat,Roboto,sans-serif;
}

.c5:focus,
.c5:hover {
  background: rgba(211,214,215,0.5);
  cursor: pointer;
  outline: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 0.2rem;
  width: 2rem;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxirZ c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,15L12,10L17,15H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
       
    </button>
    <div
      class="c4"
    >
      <div
        class="c5"
        id="choosePokemon-option-Bulbasaur"
        tabindex="0"
      >
        <div
          class="c6"
        />
        <span>
          Bulbasaur
        </span>
      </div>
      <div
        class="c5"
        id="choosePokemon-option-Charmander"
        tabindex="0"
      >
        <div
          class="c6"
        />
        <span>
          Charmander
        </span>
      </div>
      <div
        class="c5"
        id="choosePokemon-option-Squirtle"
        tabindex="0"
      >
        <div
          class="c6"
        />
        <span>
          Squirtle
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown does not display options on initial render 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1em;
  line-height: 0;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #d3d6d7;
  color: #252c35;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
  width: 15rem;
  padding: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxirZ c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
       
    </button>
  </div>
</div>
`;

exports[`Dropdown selects multiple options when dropdown is multi 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1em;
  line-height: 0;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #d3d6d7;
  color: #252c35;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
  width: 15rem;
  padding: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxirZ c1"
    >
      <div
        class="c2"
      >
        Charmander, Squirtle
      </div>
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
       
    </button>
  </div>
</div>
`;

exports[`Dropdown selects options from values prop 1`] = `
.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

500;700;900&display=swap'); .c1 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1em;
  line-height: 0;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #d3d6d7;
  color: #252c35;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
  width: 15rem;
  padding: 0.5rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="choosePokemon-valueContainer"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxirZ c1"
    >
      <div
        class="c2"
      >
        Bulbasaur, Charmander
      </div>
      <div
        class="c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
       
    </button>
  </div>
</div>
`;
